force-app/main/default/objects/pse__VersionItem_Task__c/pse__VersionItem_Task__c.object-meta.xml
<CustomObject>
    <customHelpPage>pse__VersionHelp</customHelpPage>
    <description>A capture of a project task taken at the time the version is created.</description>
    <label>Version Item Task</label>
    <nameField>
        <displayFormat>PVT-{0000}</displayFormat>
        <label>Version Item Task Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Version Item Tasks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>