force-app/main/default/objects/pse__VersionItem_Task__c/fields/pse__Actual_Start_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>pse__Actual_Start_Date_Time__c</fullName>
    <label>Actual Start Date and Time</label>
    <type>DateTime</type>
</CustomField>