force-app/main/default/objects/pse__VersionItem_Task__c/fields/pse__Blocked__c.field-meta.xml
<CustomField>
    <fullName>pse__Blocked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The blocked status of project task referenced in the version.</description>
    <inlineHelpText>The blocked status of project task referenced in the version.</inlineHelpText>
    <label>Blocked</label>
    <type>Checkbox</type>
</CustomField>