force-app/main/default/objects/pse__VersionItem_Task__c/fields/pse__Completed__c.field-meta.xml
<CustomField>
    <fullName>pse__Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The completed status of project task referenced in the version.</description>
    <inlineHelpText>The completed status of project task referenced in the version.</inlineHelpText>
    <label>Completed</label>
    <type>Checkbox</type>
</CustomField>