force-app/main/default/objects/pse__VersionItem_Task__c/fields/pse__End_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>pse__End_Date_Time__c</fullName>
    <description>The end date and time for the task referenced in the version.</description>
    <inlineHelpText>The end date and time for the task referenced in the version.</inlineHelpText>
    <label>End Date and Time</label>
    <type>DateTime</type>
</CustomField>