force-app/main/default/objects/pse__VersionItem_Task__c/fields/pse__Percent_Complete_Hours__c.field-meta.xml
<CustomField>
    <fullName>pse__Percent_Complete_Hours__c</fullName>
    <description>The percent complete hours on the project task referenced in the version.</description>
    <inlineHelpText>The percent complete hours on the project task referenced in the version.</inlineHelpText>
    <label>Percent Complete (Hours)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>