force-app/main/default/objects/pse__VersionItem_Task__c/fields/pse__Summary__c.field-meta.xml
<CustomField>
    <fullName>pse__Summary__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the task referenced in the version is a summary task.</description>
    <inlineHelpText>Indicates if the task referenced in the version is a summary task.</inlineHelpText>
    <label>Summary</label>
    <type>Checkbox</type>
</CustomField>